fix map images on tablet size

--- a/stylesheets/commons/BigMatch.less
+++ b/stylesheets/commons/BigMatch.less
@@ -1255,8 +1255,6 @@ span.slash {
 			height: ~"max( 5rem, 5vw )";
 			overflow: hidden;
 			border-radius: 0.5rem 0.5rem 0 0;
-			display: flex;
-			position: relative;
 
 			img {
 				display: flex;
